--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <title> test site</title>
-  <body bgcolor=rgb(200,151,0)>
+  <body>
     <h1>My site mfs</h1>
     <p>Test, add more stuff later..
   </body>
