--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <h4><p>Large jeans was one of the biggest change from the 90s to today's style. Even if they're out of style
       there are some who still like to show the old school style.</h4> 
       <img src="https://coutureafricamag.com/images/overbaggyjeans.jpg" height="500" width="400">
-      </p>
+      Here, Jay-Z wears those type of clothes and it is a little more okay for him to since he was a rapper in the 90s,
+      anyone that just now would try to get into that style just simply looks bad.</p>
     
   </body>
 </html>
