--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </p>
     <h4><p><center>Large jeans was one of the biggest change from the 90s to today's style.
       <br>Even if they're out of style there are some who still like to show the old school style.</center></br></h4> 
-      <center><img src="https://coutureafricamag.com/images/overbaggyjeans.jpg" height="500" width="400"></center>
+      <center><img src="https://photos.app.goo.gl/soUZn9j7r9VUZuCi1" height="500" width="400"></center>
       <br><center>Here, Jay-Z wears those type of clothes and it is a little more okay for him to
       since he was a rapper in the 90s,anyone that just now would try to get into that style just simply looks bad.</center></br></p>
     
