--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </p>
     <h4><p><center>Large jeans was one of the biggest change from the 90s to today's style.
       <br>Even if they're out of style there are some who still like to show the old school style.</center></br></h4> 
-      <center><img src="externalfile:drive-a89c481993b4fa4b782927b80901ec5e985ec51d/root/bggy.pdf" height="500" width="400"></center>
+      <center><img src="https://photos.google.com/photo/AF1QipPV8kL-RcnMFwF2w_3YXUkedeWG0-75VQ8NrV02" height="500" width="400"></center>
       <br><center>Here, Jay-Z wears those type of clothes and it is a little more okay for him to
       since he was a rapper in the 90s,anyone that just now would try to get into that style just simply looks bad.</center></br></p>
     
