--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
   <title>90s Site</title>
-  <body>
+  <body> {
+    background-image: url("https://ih0.redbubble.net/image.151630003.0653/flat,800x800,075,f.u2.jpg")
+    }
     <h1><center>My 90s site</center></h1>
     <h2><p><center>The stylish men of 90s</center></h2>
     <h4><center>The 90s style was mainly with larger and unfit clothes.An example can be seen below.</center><h4> </p>
@@ -13,7 +15,7 @@
     <h4><p><center>Large jeans was one of the biggest change from the 90s to today's style.
       <br>Even if they're out of style there are some who still like to show the old school style.</center></br></h4> 
       <center><img src="https://photos.google.com/photo/AF1QipPV8kL-RcnMFwF2w_3YXUkedeWG0-75VQ8NrV02" height="500" width="400"></center>
-      <br><center>Here, Jay-Z wears those type of clothes and it is a little more okay for him to
+      <br><center>Here, Jay-Z wears those type of clothes and it is a little more acceptable for him to
       since he was a rapper in the 90s,anyone that just now would try to get into that style just simply looks bad.</center></br></p>
     
   </body>
