--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <html>
   <title>90s Site</title>
-  <body> {
-    background-image: url("https://ih0.redbubble.net/image.151630003.0653/flat,800x800,075,f.u2.jpg")
-    }
+  <body background="https://ih0.redbubble.net/image.151630003.0653/flat,800x800,075,f.u2.jpg">
+    
     <h1><center>My 90s site</center></h1>
     <h2><p><center>The stylish men of 90s</center></h2>
     <h4><center>The 90s style was mainly with larger and unfit clothes.An example can be seen below.</center><h4> </p>
