--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </p>
     <h4><p><center>Large jeans was one of the biggest change from the 90s to today's style.
       <br>Even if they're out of style there are some who still like to show the old school style.</center></br></h4> 
-      <center><img src="bggy.pdf" height="500" width="400"></center>
+      <center><img src="jayz-90s" height="500" width="400"></center>
       <br><center>Here, Jay-Z wears those type of clothes and it is a little more acceptable for him to
       since he was a rapper in the 90s,anyone that just now would try to get into that style just simply looks bad.</center></br></p>
     
