--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <title>90s Site</title>
   <body background="https://ih0.redbubble.net/image.151630003.0653/flat,800x800,075,f.u2.jpg">
-    
+    <img src="90s-gif.jpg">
     <font size="12"><center>90s Site</center></font></h1>
     <h2><p><center>The stylish men of 90s</center></h2>
     <h2><center>The 90s style was mainly with larger and unfit clothes.An example can be seen below.</center><h2> </p>
@@ -14,8 +14,8 @@
     <h2><p><center>Large jeans was one of the biggest change from the 90s to today's style.
       <br>Even if they're out of style there are some who still like to show the old school style.</center></br></h2> 
       <center><img src="overbaggyjeans.jpg" height="500" width="400"></center>
-      <br><center><h2>Here, Jay-Z wears those type of clothes and it is a little more acceptable for him to</br>
-      <br>since he was a rapper in the 90s,anyone that just now would try to get into that style just simply looks bad.</h2></center></br></p>
+      <br><center><h2>Here, Jay-Z wears those type of clothes and it is a little more acceptable for him to
+      since he was a rapper in the 90s,anyone that just now would try to get into that style just simply looks bad.</h2></center></br></p>
     
   </body>
 </html>
