--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <title>90s Site</title>
-  <body background="cassette.jpg">
+  <body background="cassettebk.jpg">
     <center><img src="90s-gif.jpg"></center>
     
     <h2><p><center>The stylish men of 90s</center></h2>
