--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <h2><p><center>The stylish men of 90s</center></h2>
     <h2><center>The 90s style was mainly with larger and unfit clothes.An example can be seen below.</center><h2> </p>
     <center><img src="90sgroup.jpg" height="260" width="400"></center>
+    <p><center> The 90s was mostly old, vintage and over-sized clothes. It was a time where you could wear anything 
+      and kind of get away with it since most people worn kind of "messy" clothes. From one point it's good that the trend 
+      went out of style, but from another point it is kind of disappointing. There are still people that like to wear them
+      but everyone knows you'd just look out of order, in a way, compared to everyone else. It went to the exact opposite in s few years,
+      from over sized to tight clothes especially jeans. Click 
+      <a href="http://www.instyle.com/fashion/clothing"> for more examples of today's trends.</center></p>
    
     <h2><p><center>Men's fashion was mostly with those types of clothes until recent years. In the picture below
       celebrities also had the "baggy" style which a lot of people liked</center></h2>
