--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       went out of style, but from another point it is kind of disappointing. There are still people that like to wear them
       but everyone knows you'd just look out of order, in a way, compared to everyone else. It went to the exact opposite in s few years,
       from over sized to tight clothes especially jeans. Click 
-      <a href="http://www.instyle.com/fashion/clothing"> for more examples of today's trends.</center></p>
+      <a href="http://www.instyle.com/fashion/clothing">here</a> for more examples of today's trends.</center></p>
    
     <h2><p><center>Men's fashion was mostly with those types of clothes until recent years. In the picture below
       celebrities also had the "baggy" style which a lot of people liked</center></h2>
