--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
     </p>
     <h2><p><center>Large jeans was one of the biggest change from the 90s to today's style.
       <br>Even if they're out of style there are some who still like to show the old school style.</center></br></h2> 
-      <center><img src="overbaggyjeans.jpg" height="500" width="400"></center>
+      <center><img src="https://i.pinimg.com/474x/e6/b2/07/e6b2075d85dd8d7c6f08a96ce85f434e--photo-beyonce-jayz.jpg"</center>
       <br><center><h2>Here, Jay-Z wears those type of clothes and it is a little more acceptable for him to
-      since he was a rapper in the 90s,anyone that just now would try to get into that style just simply looks bad.</h2></center></br></p>
+      since he was a rapper in the 90s,anyone that just now would try to get into that style just simply looks bad.You can find 
+      more exaples of Jay-z with this style <a href="https://i.pinimg.com/474x/e6/b2/07/e6b2075d85dd8d7c6f08a96ce85f434e--photo-beyonce-jayz.jpg">here</a></h2></center></br></p>
     
   </body>
 </html>
