--- a/index.html
+++ b/index.html
@@ -23,7 +23,11 @@
       <br><center><h2>Here, Jay-Z wears those type of clothes and it is a little more acceptable for him to
       since he was a rapper in the 90s,anyone that just now would try to get into that style just simply looks bad.You can find 
       more exaples of Jay-z with this style <a href="https://i.pinimg.com/474x/e6/b2/07/e6b2075d85dd8d7c6f08a96ce85f434e--photo-beyonce-jayz.jpg">here</a></h2></center></br></p>
-    
+    <p><center>To get a little away from the bottoms, jeans specifically, windbreakers were also very used and many people
+      wore them. Still to this day they are still in style, most likely because of how useful they are. Could be worn when it's
+      a little warm, could be worn when it's a little cold, and still looks great. The only difference in windbreakers that's
+      a bit visible is the amount of colors they have. Most of them today are not too colorful as most clothes were back in the 90s. 
+      It is, however, in my opinion a good thing since too many different colors make your outfit just funny.
   </body>
 </html>
 
