--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
       It is, however, in my opinion a good thing since too many different colors make your outfit just funny.</center></p></h2>
       <center><img src="http://www.bluemaize.net/im/jackets/vintage-windbreaker-jacket-8.jpg" height="600" width="560"></center> 
 
+
+     <h2><center>If you want more examples of today's trends and what people wear visit <i>Pinterest</i> or click
+       <a href="https://www.pinterest.com/categories/mens_fashion/"> here<a/> for direct website.</center></h2>
 </body>
 </html>
 
