--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <center><img src="http://www.bluemaize.net/im/jackets/vintage-windbreaker-jacket-8.jpg" height="600" width="560"></center> 
 <h2><p><center>Some more trends that changed: </p>
   <center><ul>Bowl cuts</ul> if you don't know what that is, here is a picture:</center>
-  <center> <img src= ""
+  <center> <img src= "bowlcut.jpg" height="400" width="271"></center>
 
 
      <h2><center>If you want more examples of today's trends and what people wear visit <i>Pinterest</i> or click
