--- a/index.html
+++ b/index.html
@@ -30,7 +30,10 @@
       It is, however, in my opinion a good thing since too many different colors make your outfit just funny.</center></p></h2>
       <center><img src="http://www.bluemaize.net/im/jackets/vintage-windbreaker-jacket-8.jpg" height="600" width="560"></center> 
 <h2><p><center>Some more trends that changed: </p>
-  <center><ul>Bowl cuts</ul> if you don't know what that is, here is a picture:</center>
+  <center><ul>
+    <li>Bowl cuts</li>
+    </ul> 
+    if you don't know what that is:</center>
   <center> <img src= "bowlcut.jpg" height="271" width="400"></center>
 
 
