--- a/index.html
+++ b/index.html
@@ -32,8 +32,11 @@
 <h2><p><center>Some more trends that changed: </p>
   <center><ul>
     <li>Bowl cuts</li>
+    <li>Shoes with chunky laces</li>
+    <li>Starter jackets</li>
+    <li>Baggy vertical striped shirts</li>
     </ul> 
-    if you don't know what that is:</center>
+    if you don't know what a bowl cut is:</center>
   <center> <img src= "bowlcut.jpg" height="271" width="400"></center>
 
 
