--- a/index.html
+++ b/index.html
@@ -29,15 +29,15 @@
       a bit visible is the amount of colors they have. Most of them today are not too colorful as most clothes were back in the 90s. 
       It is, however, in my opinion a good thing since too many different colors make your outfit just funny.</center></p></h2>
       <center><img src="http://www.bluemaize.net/im/jackets/vintage-windbreaker-jacket-8.jpg" height="600" width="560"></center> 
-<h2><p><center>Some more trends that changed: </p>
-  <center><ul>
+<h2><p>Some more trends that changed:</p>
+  <ul>
     <li>Bowl cuts</li>
     <li>Shoes with chunky laces</li>
     <li>Starter jackets</li>
     <li>Baggy vertical striped shirts</li>
     </ul> 
-    if you don't know what a bowl cut is:</center>
-  <center> <img src= "bowlcut.jpg" height="271" width="400"></center>
+    if you don't know what a bowl cut is:
+  <img src= "bowlcut.jpg" height="271" width="400"></h2>
 
 
      <h2><center>If you want more examples of today's trends and what people wear visit <i>Pinterest</i> or click
