--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
     <li>Starter jackets</li>
     <li>Baggy vertical striped shirts</li>
     </ul> 
-    if you don't know what a bowl cut is:
-  <img src= "bowlcut.jpg" height="271" width="400"></h2>
+    If you don't know what a bowl cut is:
+  <br><img src= "bowlcut.jpg" height="271" width="400"></br></h2>
 
 
      <h2><center>If you want more examples of today's trends and what people wear visit <i>Pinterest</i> or click
