--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <center><img src="http://www.bluemaize.net/im/jackets/vintage-windbreaker-jacket-8.jpg" height="600" width="560"></center> 
 <h2><p>Some more trends that changed:</p>
   <ul>
-    <center><li>Bowl cuts</li></center>
+    <center><li>The "Bowl cut" haircut</li></center>
     <center><li>Shoes with chunky laces</li></center>
     <center><li>Starter jackets</li></center>
     <center><li>Baggy vertical striped shirts</li></center>
