--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
       <center><img src="http://www.bluemaize.net/im/jackets/vintage-windbreaker-jacket-8.jpg" height="600" width="560"></center> 
 <h2><p>Some more trends that changed:</p>
   <ul>
-    <center><li>The "Bowl cut" haircut</li></center>
-    <center><li>Shoes with chunky laces</li></center>
-    <center><li>Starter jackets</li></center>
-    <center><li>Baggy vertical striped shirts</li></center>
+    <li>The "Bowl cut" haircut</li>
+    <li>Shoes with chunky laces</li>
+    <li>Starter jackets</li>
+   <li>Baggy vertical striped shirts</li>
     </ul> 
     If you don't know what a bowl cut is:
   <br><img src= "bowlcut.jpg" height="271" width="400"></br></h2>
