--- a/index.html
+++ b/index.html
@@ -1,34 +1,34 @@
 <html>
   <title>90s Site</title>
   <body background="90sLA.jpg" >
-    <center><img src="90s-gif.jpg"></center>
+    <center><img src="90s-gif.jpg">
     
-    <h1><p><center>The stylish men of 90s</center></h1>
-    <h2><center>The 90s style was mainly with larger and unfit clothes.An example can be seen below.</center><h2> </p>
-    <center><img src="90sgroup.jpg" height="260" width="400"></center>
-    <p><center> The 90s was mostly old, vintage and over-sized clothes. It was a time where you could wear anything</center>
-      <center>and kind of get away with it since most people worn kind of "messy" clothes.From one point it's good that the trend</center>
-      <center>went out of style, but from another point it is kind of disappointing. There are still people that like to wear them</center>
-      <center>but everyone knows you'd just look out of order, in a way, compared to everyone else. It went to the exact opposite in s few years,</center>
-     <center> from over sized to tight clothes especially jeans. Click 
-      <a href="http://www.instyle.com/fashion/clothing">here</a> for more examples of today's trends.</center></p>
+    <h1><p>The stylish men of 90s</h1>
+    <h2>The 90s style was mainly with larger and unfit clothes.An example can be seen below.<h2> </p>
+    <img src="90sgroup.jpg" height="260" width="400">
+    <p>The 90s was mostly old, vintage and over-sized clothes. It was a time where you could wear anything
+      and kind of get away with it since most people worn kind of "messy" clothes.From one point it's good that the trend
+      went out of style, but from another point it is kind of disappointing. There are still people that like to wear them
+      but everyone knows you'd just look out of order, in a way, compared to everyone else. It went to the exact opposite in s few years,
+      from over sized to tight clothes especially jeans. Click 
+      <a href="http://www.instyle.com/fashion/clothing">here</a> for more examples of today's trends.</p>
    
-    <h2><p><center>Men's fashion was mostly with those types of clothes until recent years. In the picture below
-      celebrities also had the "baggy" style which a lot of people liked</center></h2>
-    <center><img src="90sstars.jpg"></center>     
+    <h2><p>Men's fashion was mostly with those types of clothes until recent years. In the picture below
+      celebrities also had the "baggy" style which a lot of people liked</h2>
+    <img src="90sstars.jpg">  
     </p>
-    <h2><p><center>Large jeans was one of the biggest change from the 90s to today's style.
-      <br>Even if they're out of style there are some who still like to show the old school style.</center></br></h2> 
-      <center><img src="https://i.pinimg.com/474x/e6/b2/07/e6b2075d85dd8d7c6f08a96ce85f434e--photo-beyonce-jayz.jpg"</center>
-      <br><center><h2>Here, Jay-Z wears those type of clothes and it is a little more acceptable for him to
+    <h2><p>Large jeans was one of the biggest change from the 90s to today's style.
+      <br>Even if they're out of style there are some who still like to show the old school style.</br></h2> 
+      <img src="https://i.pinimg.com/474x/e6/b2/07/e6b2075d85dd8d7c6f08a96ce85f434e--photo-beyonce-jayz.jpg"
+      <br><h2>Here, Jay-Z wears those type of clothes and it is a little more acceptable for him to
       since he was a rapper in the 90s,anyone that just now would try to get into that style just simply looks bad.You can find 
-      more exaples of Jay-z with this style <a href="https://i.pinimg.com/474x/e6/b2/07/e6b2075d85dd8d7c6f08a96ce85f434e--photo-beyonce-jayz.jpg">here</a></h2></center></br></p>
-    <h2><p><center>To get a little away from the bottoms, jeans specifically, windbreakers were also very used and many people
+      more exaples of Jay-z with this style <a href="https://i.pinimg.com/474x/e6/b2/07/e6b2075d85dd8d7c6f08a96ce85f434e--photo-beyonce-jayz.jpg">here</a></h2></br></p>
+    <h2><p>To get a little away from the bottoms, jeans specifically, windbreakers were also very used and many people
       wore them. Still to this day they are still in style, most likely because of how useful they are. Could be worn when it's
       a little warm, could be worn when it's a little cold, and still looks great. The only difference in windbreakers that's
       a bit visible is the amount of colors they have. Most of them today are not too colorful as most clothes were back in the 90s. 
-      It is, however, in my opinion a good thing since too many different colors make your outfit just funny.</center></p></h2>
-      <center><img src="http://www.bluemaize.net/im/jackets/vintage-windbreaker-jacket-8.jpg" height="600" width="560"></center> 
+      It is, however, in my opinion a good thing since too many different colors make your outfit just funny.</p></h2>
+      <img src="http://www.bluemaize.net/im/jackets/vintage-windbreaker-jacket-8.jpg" height="600" width="560">
 <h2><p>Some more trends that changed:</p>
   <ul>
     <li>The "Bowl cut" haircut</li>
@@ -40,7 +40,7 @@
   <br><img src= "bowlcut.jpg" height="271" width="400"></br></h2>
 
 
-     <h2><center>If you want more examples of today's trends and what people wear visit <i>Pinterest</i> or click
+     <h2>If you want more examples of today's trends and what people wear visit <i>Pinterest</i> or click
        <a href="https://www.pinterest.com/categories/mens_fashion/"> here<a/> for direct website.</center></h2>
 </body>
 </html>
