--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       a little warm, could be worn when it's a little cold, and still looks great. The only difference in windbreakers that's
       a bit visible is the amount of colors they have. Most of them today are not too colorful as most clothes were back in the 90s. 
       It is, however, in my opinion a good thing since too many different colors make your outfit just funny.</p></h2>
-      <img src="http://www.bluemaize.net/im/jackets/vintage-windbreaker-jacket-8.jpg" height="600" width="560">
+      <img src="http://www.bluemaize.net/im/jackets/vintage-windbreaker-jacket-8.jpg" height="600" width="560"></center>
 <h2><p>Some more trends that changed:</p>
   <ul>
     <li>The "Bowl cut" haircut</li>
@@ -40,7 +40,7 @@
   <br><img src= "bowlcut.jpg" height="271" width="400"></br></h2>
 
 
-     <h2>If you want more examples of today's trends and what people wear visit <i>Pinterest</i> or click
+     <center><h2>If you want more examples of today's trends and what people wear visit <i>Pinterest</i> or click
        <a href="https://www.pinterest.com/categories/mens_fashion/"> here<a/> for direct website.</center></h2>
 </body>
 </html>
