--- a/index.html
+++ b/index.html
@@ -31,12 +31,13 @@
       <img src="http://www.bluemaize.net/im/jackets/vintage-windbreaker-jacket-8.jpg" height="600" width="560"></center>
 <h2><p>Some more trends that changed:</p>
 <div> 
- <ul>
+ ul { text-align : center;
+      list-align : center;
     <li>The "Bowl cut" haircut</li>
     <li>Shoes with chunky laces</li>
     <li>Starter jackets</li>
    <li>Baggy vertical striped shirts</li>
-    </ul> 
+  } 
   </div>
     If you don't know what a bowl cut is:
   <br><img src= "bowlcut.jpg" height="271" width="400"></br></h2>
