--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       It is, however, in my opinion a good thing since too many different colors make your outfit just funny.</p></h2>
       <img src="http://www.bluemaize.net/im/jackets/vintage-windbreaker-jacket-8.jpg" height="600" width="560"></center>
 <h2><p>Some more trends that changed:</p>
- <ul style="text-align:center">
+ <ul style="text-align:center; list-style-position=inside;">
     <li>The "Bowl cut" haircut</li>
     <li>Shoes with chunky laces</li>
     <li>Starter jackets</li>
