--- a/index.html
+++ b/index.html
@@ -30,12 +30,26 @@
       It is, however, in my opinion a good thing since too many different colors make your outfit just funny.</p></h2>
       <img src="http://www.bluemaize.net/im/jackets/vintage-windbreaker-jacket-8.jpg" height="600" width="560"></center>
 <h2><p>Some more trends that changed:</p>
- <ul style="text-align:center; list-style-position=inside;">
+  <style type="text/css">
+.test{text-align:center}
+.test ul{
+	display:inline-block;
+	text-align:left;
+}
+* html .test ul{display:inline}/* ie6 inline-block fix */
+*+html .test ul{display:inline}/* ie7 inline-block fix */
+</style>
+  
+  <div class="test">
+	<ul>
+   
     <li>The "Bowl cut" haircut</li>
     <li>Shoes with chunky laces</li>
     <li>Starter jackets</li>
    <li>Baggy vertical striped shirts</li>
-  </ul>
+	
+	</ul>
+</div>
     If you don't know what a bowl cut is:
   <br><img src= "bowlcut.jpg" height="271" width="400"></br></h2>
 
