--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 	display:inline-block;
 	text-align:left;
 }
-* html .test ul{display:inline}/* ie6 inline-block fix */
-*+html .test ul{display:inline}/* ie7 inline-block fix */
+* html .test ul{display:inline}
+*+html .test ul{display:inline}
 </style>
   
   <div class="test">
