--- a/index.html
+++ b/index.html
@@ -52,8 +52,22 @@
 </div>
     If you don't know what a bowl cut is:
   <br><img src= "bowlcut.jpg" height="271" width="400"></br></h2>
+<h2><p>To go in the opposite direction from things that kind of did stay in style, here are some things that 
+	me, and I'm sure everyone else too is happy they went out of style ranking from worst to least worst:
 
-
+<div class="test">
+ <ul>
+   
+    <li>JNCO jeans...</li>
+	 </br><img src="https://media4.s-nbcnews.com/j/newscms/2015_45/847676/5
+		 jahrsdko8acc6p4zor4juj8abnyivqvljo63awqieudxo4s3e-etxhks7143yc2iejoyl-
+		 zbmic4brhbboahq_0a023b6e09d48e6103197951c0f88756.focal-320x417.jpg" </br>
+    <li>Shoes with chunky laces</li>
+    <li>Starter jackets</li>
+    <li>Baggy vertical striped shirts</li>
+	
+ </ul>
+</div>
      <h2>If you want more examples of today's trends and what people wear visit <i>Pinterest</i> or click
        <a href="https://www.pinterest.com/categories/mens_fashion/"> here<a/> for direct website.</center></h2>
 </body>
