--- a/index.html
+++ b/index.html
@@ -59,9 +59,7 @@
  <ul>
    
     <li>JNCO jeans...</li>
-	 </br><img src="https://media4.s-nbcnews.com/j/newscms/2015_45/847676/5
-		 jahrsdko8acc6p4zor4juj8abnyivqvljo63awqieudxo4s3e-etxhks7143yc2iejoyl-
-		 zbmic4brhbboahq_0a023b6e09d48e6103197951c0f88756.focal-320x417.jpg" </br>
+	 </br><img src="JNCOjeans.jpg" </br>
     <li>Shoes with chunky laces</li>
     <li>Starter jackets</li>
     <li>Baggy vertical striped shirts</li>
