--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
 	 </br><img src="JNCOjeans.jpg" </br>
     <li>Shoes with chunky laces</li>
     <li>Starter jackets</li>
+	<br><img src="starterjacket.jpg" </br>
     <li>Baggy vertical striped shirts</li>
 	
  </ul>
