--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <body background="90sLA.jpg" >
     <center><img src="90s-gif.jpg">
     
-    <h1><p>The stylish men of 90s</h1>
+    <h1><p>The 90s styles</h1>
     <h2>The 90s style was mainly with larger and unfit clothes.An example can be seen below.<h2> </p>
     <img src="90sgroup.jpg" height="260" width="400">
     <p>The 90s was mostly old, vintage and over-sized clothes. It was a time where you could wear anything
@@ -30,7 +30,8 @@
       It is, however, in my opinion a good thing since too many different colors make your outfit just funny.</p></h2>
       <img src="http://www.bluemaize.net/im/jackets/vintage-windbreaker-jacket-8.jpg" height="600" width="560">
 <h2><p>Some more trends that changed:</p>
-  <style type="text/css">
+ 
+<style type="text/css">
 .test{text-align:center}
 .test ul{
 	display:inline-block;
@@ -44,19 +45,19 @@
 	<ul>
    
     <li>The "Bowl cut" haircut</li>
+		<br><img src= "bowlcut.jpg" height="271" width="400"></br>
     <li>Shoes with chunky laces</li>
     <li>Starter jackets</li>
    <li>Baggy vertical striped shirts</li>
 	
 	</ul>
 </div>
-    If you don't know what a bowl cut is:
-  <br><img src= "bowlcut.jpg" height="271" width="400"></br></h2>
+ 
 <h2><p>To go in the opposite direction from things that kind of did stay in style, here are some things that 
 	me, and I'm sure everyone else too is happy they went out of style ranking from worst to least worst:
 
 <div class="test">
- <ul>
+	<ul>
    
     <li>JNCO jeans...</li>
 	 </br><img src="JNCOjeans.jpg" </br>
@@ -65,10 +66,11 @@
 	<br><img src="starterjacket.jpg" </br>
     <li>Baggy vertical striped shirts</li>
 	
- </ul>
+	</ul>
 </div>
+
      <h2>If you want more examples of today's trends and what people wear visit <i>Pinterest</i> or click
-       <a href="https://www.pinterest.com/categories/mens_fashion/"> here<a/> for direct website.</center></h2>
+       <a href="https://www.pinterest.com/categories/mens_fashion/"> here</a> for direct website.</center></h2>
 </body>
 </html>
 
