--- a/index.html
+++ b/index.html
@@ -45,14 +45,14 @@
   <div class="test">
 	<ul>
    
-    <li>The "Bowl cut" haircut</li>
+    <li><h2>The "Bowl cut" haircut</li>
 		<br><img src= "bowlcut.jpg" height="271" width="400"></br>
     <li>JNCO jeans...</li>
 	 	</br><img src="JNCOjeans.jpg" </br>
     <li>Shoes with chunky laces</li>
     <li>Starter jackets</li>
 		<br><img src="starterjacket.jpg" </br>
-   <li>Baggy vertical striped shirts</li>
+    <li>Baggy vertical striped shirts</h2></li>
 	
 	</ul>
 </div>
