--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       a bit visible is the amount of colors they have. Most of them today are not too colorful as most clothes were back in the 90s. 
       It is, however, in my opinion a good thing since too many different colors make your outfit just funny.</p></h2>
       <img src="http://www.bluemaize.net/im/jackets/vintage-windbreaker-jacket-8.jpg" height="600" width="560">
-<h2><p>To go in the opposite direction from things that kind of did stay in style, here are some things that 
+    <h2><p>To go in the opposite direction from things that kind of did stay in style, here are some things that 
 	me, and I'm sure everyone else too is happy they went out of style ranking from worst to least worst:</p></h2>
  
 <style type="text/css">
@@ -45,14 +45,14 @@
   <div class="test">
 	<ul>
    
-    <li><h2>The "Bowl cut" haircut</li>
+    <h2><li>The "Bowl cut" haircut</li>
 		<br><img src= "bowlcut.jpg" height="271" width="400"></br>
     <li>JNCO jeans...</li>
 	 	</br><img src="JNCOjeans.jpg" </br>
     <li>Shoes with chunky laces</li>
     <li>Starter jackets</li>
 		<br><img src="starterjacket.jpg" </br>
-    <li>Baggy vertical striped shirts</h2></li>
+	  <li>Baggy vertical striped shirts</li></h2>
 	
 	</ul>
 </div>
