--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <center><img src="90s-gif.jpg">
     
     <h1><p>The 90s styles</h1>
-    <h2>The 90s style was mainly with larger and unfit clothes.An example can be seen below.<h2> </p>
+    <h2>The 90s style was mainly with larger and unfit clothes.An example can be seen below:<h2> </p>
     <img src="90sgroup.jpg" height="260" width="400">
     <p>The 90s was mostly old, vintage and over-sized clothes. It was a time where you could wear anything
       and kind of get away with it since most people worn kind of "messy" clothes.From one point it's good that the trend
